2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-wizard-dialog.c: (response): Move forward if there is
	no HildonWizardDialogPageFunc.

2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Iván Gómez (igomez@igalia.com)

	* src/hildon-app-menu.c:
	* src/hildon-button.c:
	* src/hildon-picker-dialog.c: (hildon_picker_dialog_class_init):
	* src/hildon-stackable-window.c:
	* src/hildon-time-selector.c:
	* src/hildon-touch-selector.c:
	* src/hildon-window.c:

	Add more "since" tags to the new API in hildon 2.2.

2008-12-05 14:42:11  Tim Janik  <timj@imendio.com>

	* src/hildon-gtk.h: removed hildon_gtk_widget_set_theme_size() and
	HildonSizeType, which are supplied by Gtk+ now.

	* src/hildon-dialog.c: leave theming and sizing of buttons to GtkDialog.

	* Fixes NB#90867, patch by Christian Dywan.

2008-12-05  Claudio Saavedra  <csaavedra@igalia.com>

	Patch contributed by Iván Gómez (igomez@igalia.com)

	* src/hildon-pannable-area.c: Add "since" tags to the new API in
	hildon 2.2.

2008-12-05  Claudio Saavedra  <csaavedra@igalia.com>

	* examples/hildon-wizard-dialog-example.c: (on_page_switch),
	(some_page_func), (main): Update the example to use a
	HildonWizardDialogPageFunc function.

	* src/hildon-wizard-dialog-private.h: Add private data for
	the HildonWizardDialogPageFunc function usage.

	* src/hildon-wizard-dialog.c: (hildon_wizard_dialog_class_init),
	(destroy), (hildon_wizard_dialog_init), (response),
	(hildon_wizard_dialog_set_forward_page_func):
	* src/hildon-wizard-dialog.h: Add a HildonWizardDialogPageFunc function,
	that applications can use to stop a HildonWizardDialog to jump to
	the next page.

	Fixes: NB#94214 (No way to stop HildonWizardDialog from going to
	next page)

2008-12-04  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-program.h
	* src/hildon-program-private.h
	* src/hildon-program.c (hildon_program_init)
	(hildon_program_set_common_app_menu)
	(hildon_program_get_common_app_menu):