@@ -1,5 +1,14 @@
 2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>
 
+	* src/hildon-touch-selector-entry.c:
+	(hildon_touch_selector_entry_init): Use a HildonEntry instead
+	of a GtkEntry to get proper theming.
+
+	Fixes: NB#94972 (Hildon Picker with Entry should use HildonEntry
+	widget, not GtkEntry)
+
+2008-12-09  Claudio Saavedra  <csaavedra@igalia.com>
+
 	* src/hildon-wizard-dialog.c: (response): Move forward if there is
 	no HildonWizardDialogPageFunc.
 
